Leader Board Done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     </header>
     <!-- Header Section End -->
+
+    <!-- top-players section Start -->
     <main>
         <section class="container">
             <div class="top-players">
@@ -46,8 +48,10 @@
                     <h3 class="player-name">Top player-6</h3>
                 </div>
                 </div>
-            </div>
+             </div> 
+        <!--top-players section end -->
             <hr>
+        <!-- blog section Start -->
             <div class="top-blogs">
                 <h2 class="section-title">Top Blog</h2>
                 <div class="blogs">
@@ -90,6 +94,9 @@
                 </div>
             </div>
         </section>
+        <!-- blogs section End -->
+
+        <!-- courses section start -->
         <section class="container">
             <h2 class="section-title">Lates Course</h2>
             <div class="courses">
@@ -98,25 +105,74 @@
                         <img src="images/courses/course-1.png" alt="">
                     </div>
                     <div class="course-details">
-                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <span>
+                            <h3 class="course-title">React - The Complete Guide 2020</h3>
                         <p class="course-author">Reed Krakoff.</p>
+                        </span>
                         <div class="course-info">
-                            <div class="course-rating">
+                            <div>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star"></i>
-                                <span class="ratting">4.5</span>
+                                <i class="fas fa-star empty"></i>
+                                <span class="rating">4.5</span>
                             </div>
-                            <div class="duration">
+                            <div class="course-duration">
                                     <i class="far fa-clock"></i>
-                                    01:30 hr 
+                                    01:30hr 
                                 </div>
                         </div>
                     </div>
                 </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <span><h3 class="course-title">Powerpoint 2020 Master Powerpoint Cour</h3>
+                            <p class="course-author">Walter Scott</p></span>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span class="rating">4.3</span>
+                            </div>
+                            <div class="course-duration">
+                                    <i class="far fa-clock"></i>
+                                    01:20hr 
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <span><h3 class="course-title">The Complete JavaScript  Guide 2020</h3>
+                            <p class="course-author">Reed Krakoff.</p></span>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span class="rating">4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr 
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            
         </section>
     </main>
 </body>
